# il2Fusion

./: LICENSE  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: c-cpp.yml  main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/tools/textextracttool/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: moudle.prop  native_init  xposed_init
app/src/main/assets/xposed/: module.prop
app/src/main/cpp/: CMakeLists.txt  native_hook.cpp
app/src/main/cpp/Dobby/common/: os_arch_features.h
app/src/main/cpp/Dobby/source/Backend/UserMode/ExecMemory/: code-patch-tool-posix.cc
app/src/main/cpp/Dobby/source/Backend/UserMode/PlatformUtil/Linux/: ProcessRuntime.cc
app/src/main/cpp/Dobby/source/PlatformUtil/: ProcessRuntime.h
app/src/main/cpp/Dobby/source/TrampolineBridge/ClosureTrampolineBridge/arm64/: closure_bridge_arm64.asm
app/src/main/cpp/plugins/textExtractor/: textExtractor.cpp  textExtractor.h
app/src/main/cpp/utils/: utils.cpp  utils.h
app/src/main/java/com/tools/il2fusion/config/: ConfigContentProvider.kt  HookConfigRepository.kt  HookConfigStore.kt
app/src/main/java/com/tools/il2fusion/ui/: HookComponents.kt  HookConfigApp.kt  (+2 more)
app/src/main/java/com/tools/module/: MainHook.kt  NativeBridge.kt
app/src/main/java/com/tools/textextracttool/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/tools/textextracttool/: ExampleUnitTest.kt
doc/: README_EN.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
